🎨 Palette: Add skip link and focus management

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,6 +10,7 @@
 <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Zum Hauptinhalt springen</a>
     <div class="dashboard-wrapper">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
@@ -88,7 +89,7 @@
         </aside>
 
         <!-- Main Content -->
-        <main class="main-content">
+        <main class="main-content" id="main-content">
             <div class="topbar">
                 <div class="d-flex align-center gap-1">
                     <button class="sidebar-toggle" id="sidebarToggle" onclick="toggleSidebar()" aria-label="Sidebar umschalten">
