feat(ui): add password visibility toggle to login page
- Add CSS for .input-group and .password-toggle
- Add toggle button to index.html
- Add toggle logic to login.js
- Add Playwright test script tests/ux_password_toggle.js

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
                         <div class="input-group">
                             <i class="bi bi-lock input-icon"></i>
                             <input type="password" id="password" class="form-control" placeholder="Passwort eingeben" required>
+                            <button type="button" id="togglePassword" class="password-toggle" aria-label="Passwort anzeigen">
+                                <i class="bi bi-eye"></i>
+                            </button>
                         </div>
                     </div>
                     <div id="loginError" class="hidden" style="color: var(--accent-red); font-size: 0.8125rem; margin-bottom: 1rem; padding: 0.5rem 0.75rem; background: var(--accent-red-bg); border-radius: var(--radius-sm);">
