Fix Javascript error in scan detail view
- Updated `public/js/dashboard.js` to use the correct ID `detailId` instead of `detailScanId`.
- Added missing `detailPorts` element to `public/dashboard.html` to display the port range and prevent JS error.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -665,6 +665,7 @@
                             <div><strong>Status:</strong> <span id="detailStatus"></span></div>
                             <div><strong>Gestartet:</strong> <span id="detailStarted"></span></div>
                             <div><strong>Abgeschlossen:</strong> <span id="detailCompleted"></span></div>
+                            <div><strong>Ports:</strong> <span id="detailPorts" class="text-mono"></span></div>
                         </div>
                     </div>
                 </div>
