--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -475,8 +475,8 @@
                     <div class="card-header"><h3><i class="bi bi-play-circle mr-1"></i> Kette ausführen</h3></div>
                     <div class="card-body">
                         <div class="scan-config">
-                            <div class="form-group"><label>Scan-ID</label><input type="number" id="chainExecScanId" class="form-control" placeholder="Abgeschlossener Scan" min="1"></div>
-                            <div class="form-group"><label>Ziel-IP</label><input type="text" id="chainExecTargetIp" class="form-control" placeholder="z.B. 192.168.1.1"></div>
+                            <div class="form-group"><label>Scan-ID</label><select id="chainExecScanId" class="form-control"></select></div>
+                            <div class="form-group"><label>Ziel-IP</label><select id="chainExecTargetIp" class="form-control"><option value="">Bitte Scan wählen...</option></select></div>
                             <div class="form-group"><label>Ziel-Port</label><input type="number" id="chainExecTargetPort" class="form-control" placeholder="z.B. 445"></div>
                             <div class="form-group"><label>Angriffskette</label><select id="chainExecChainId" class="form-control"></select></div>
                             <div class="form-group full-width" style="border-top:1px solid var(--border-color);padding-top:1rem;margin-top:0.5rem">
