--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -182,7 +182,6 @@
                     <div class="card mb-3">
                         <div class="card-header"><h3><i class="bi bi-table mr-1"></i> Scan-Ergebnisse</h3>
                             <div class="d-flex gap-1">
-                                <button class="btn btn-outline btn-sm" onclick="createChainFromCurrentScan()"><i class="bi bi-diagram-3"></i> Chain erstellen</button>
                                 <button class="btn btn-outline btn-sm" onclick="exportResults('csv')"><i class="bi bi-filetype-csv"></i> CSV</button>
                                 <button class="btn btn-outline btn-sm" onclick="exportResults('json')"><i class="bi bi-filetype-json"></i> JSON</button>
                                 <button class="btn btn-outline btn-sm" onclick="exportResults('pdf')"><i class="bi bi-filetype-pdf"></i> PDF</button>
@@ -661,7 +660,6 @@
                 <div class="card mb-3">
                     <div class="card-header"><h3><i class="bi bi-info-circle mr-1"></i> Scan-Informationen</h3>
                         <div class="d-flex gap-1">
-                            <button class="btn btn-outline btn-sm" onclick="createChainFromDetailScan()"><i class="bi bi-diagram-3"></i> Chain erstellen</button>
                             <button class="btn btn-outline btn-sm" onclick="exportDetailResults('csv')"><i class="bi bi-filetype-csv"></i> CSV</button>
                             <button class="btn btn-outline btn-sm" onclick="exportDetailResults('json')"><i class="bi bi-filetype-json"></i> JSON</button>
                             <button class="btn btn-outline btn-sm" onclick="exportDetailResults('pdf')"><i class="bi bi-filetype-pdf"></i> PDF</button></div></div>
@@ -895,6 +893,23 @@
             <div class="modal-body" style="flex: 1; padding: 0; background: #000; overflow: hidden; position: relative;">
                 <div id="terminal-container" style="width: 100%; height: 100%;"></div>
             </div>
+        </div>
+    </div>
+
+    <!-- ========== Chain Target Modal (Service Selection) ========== -->
+    <div class="modal-overlay" id="chainTargetModal">
+        <div class="modal"><div class="modal-header"><h3><i class="bi bi-diagram-3 mr-1"></i> Chain für Ziel erstellen</h3><button class="btn-icon btn-outline" onclick="hideChainTargetModal()"><i class="bi bi-x-lg"></i></button></div>
+            <div class="modal-body">
+                <input type="hidden" id="chainTargetScanId">
+                <div class="form-group"><label>Ziel</label><input type="text" id="chainTargetIP" class="form-control" readonly></div>
+                <div class="form-group"><label>Verfügbare Services</label>
+                    <div id="chainTargetServices" style="max-height: 300px; overflow-y: auto; border: 1px solid var(--border-color); border-radius: var(--radius-sm); padding: 0.5rem;">
+                        <!-- Checkboxes will be injected here -->
+                    </div>
+                    <small class="text-muted">Wählen Sie die Dienste aus, die angegriffen werden sollen.</small>
+                </div>
+            </div>
+            <div class="modal-footer"><button class="btn btn-outline" onclick="hideChainTargetModal()">Abbrechen</button><button class="btn btn-success" onclick="createChainFromTarget()"><i class="bi bi-check-lg"></i> Chain erstellen</button></div>
         </div>
     </div>
 
