feat: add stealth scan (SYN-scan) checkbox option to Neuer Scan page
- Add toggle switch checkbox on the 'Neuer Scan' form to activate stealth scanning
- Stealth mode uses nmap SYN scan (-sS) with stealthy timing (-T2), packet
  fragmentation (-f), rate limiting (--max-rate 100), and random data padding
- Service version detection (-sV) is disabled in stealth mode for lower footprint
- Backend validates root privileges are available before allowing stealth scans
- Scan type stored as '<type>_stealth' suffix for identification in history
- Purple-themed badge with incognito icon distinguishes stealth scans in all views
- Toggle styled with custom CSS switch component, works in both dark/light themes
- Also fixes light theme CSS bug: adds missing layout variables (--sidebar-width,
  --sidebar-collapsed, --topbar-height, --radius-*) to [data-theme='light'] block

Files changed:
- public/dashboard.html: stealth checkbox UI in scan form
- public/css/style.css: toggle switch styles + light theme layout fix
- public/js/dashboard.js: sends stealthMode param, scanTypeBadge() helper
- routes/scan.js: accepts and passes stealthMode to scanner service
- services/scanner.js: stealth nmap args, root check, scan type tracking

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -160,6 +160,18 @@
                                     </select></div>
                                 <div class="form-group full-width hidden" id="customPortsGroup"><label for="customPorts">Benutzerdefinierte Ports</label>
                                     <input type="text" id="customPorts" class="form-control" placeholder="z.B. 22,80,443,3389 oder 1-1024"></div>
+                                <div class="form-group full-width">
+                                    <div class="stealth-option">
+                                        <label class="toggle-switch" for="stealthMode">
+                                            <input type="checkbox" id="stealthMode">
+                                            <span class="toggle-slider"></span>
+                                        </label>
+                                        <div class="stealth-label">
+                                            <span class="stealth-title"><i class="bi bi-incognito"></i> Stealth-Scan (SYN-Scan)</span>
+                                            <small class="text-muted" style="display:block;font-size:.75rem">Verwendet SYN-Pakete statt vollständiger TCP-Verbindungen. Schwerer zu erkennen, erfordert Root-Rechte. Service-Erkennung wird deaktiviert.</small>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="full-width">
                                     <div id="scanWarning" class="hidden" style="padding:.75rem 1rem;background:var(--accent-yellow-bg);border:1px solid rgba(245,158,11,.2);border-radius:var(--radius-sm);margin-bottom:1rem;font-size:.875rem;color:var(--accent-yellow)">
                                         <i class="bi bi-exclamation-triangle mr-1"></i><span id="scanWarningText"></span></div>
