--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                         <div  class="input-group">
                             <i  class="bi bi-lock input-icon"></i>
                             <input type="password" id="password"  placeholder="Passwort eingeben" required class="form-control">
-                            <button type="button" id="togglePassword"  aria-label="Passwort anzeigen" class="password-toggle">
+                            <button type="button" aria-label="Passwort anzeigen" class="password-toggle" data-target="password">
                                 <i  class="bi bi-eye"></i>
                             </button>
                         </div>
@@ -59,6 +59,9 @@
                         <div  class="input-group">
                             <i  class="bi bi-lock input-icon"></i>
                             <input type="password" id="currentPassword"  placeholder="Aktuelles Passwort" required class="form-control">
+                            <button type="button" aria-label="Passwort anzeigen" class="password-toggle" data-target="currentPassword">
+                                <i  class="bi bi-eye"></i>
+                            </button>
                         </div>
                     </div>
                     <div  class="form-group">
@@ -66,6 +69,9 @@
                         <div  class="input-group">
                             <i  class="bi bi-key input-icon"></i>
                             <input type="password" id="newPassword"  placeholder="Neues Passwort" required class="form-control">
+                            <button type="button" aria-label="Passwort anzeigen" class="password-toggle" data-target="newPassword">
+                                <i  class="bi bi-eye"></i>
+                            </button>
                         </div>
                     </div>
                     <div  class="form-group">
@@ -73,6 +79,9 @@
                         <div  class="input-group">
                             <i  class="bi bi-key-fill input-icon"></i>
                             <input type="password" id="confirmPassword"  placeholder="Passwort wiederholen" required class="form-control">
+                            <button type="button" aria-label="Passwort anzeigen" class="password-toggle" data-target="confirmPassword">
+                                <i  class="bi bi-eye"></i>
+                            </button>
                         </div>
                     </div>
                     <ul  id="passwordRequirements" class="password-requirements">
